# tmuxsnitch

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  README.md  config.comicshanns.toml  config.example.toml  config.iosevka.toml  config.kitty.toml
.github/workflows/: ci.yml  docker.yml  release.yml
crates/vt100/: Cargo.toml
crates/vt100/src/: attrs.rs  cell.rs  grid.rs  lib.rs  perform.rs  screen.rs  term.rs
crates/vt100/tests/: attr.rs  csi.rs  escape.rs  mode.rs  osc.rs
docs/: roadmap.md
examples/: showcase.sh
src/: ansi.rs  apictl.rs  cli.rs  client.rs  cliutil.rs  config.rs  diff.rs  embed.js  fonts.rs  hub.rs  images.rs  lib.rs  live.rs  main.rs  model.rs  parse.rs  proto.rs  pty.rs  recctl.rs  record.rs  render.rs  server.rs  ssh.rs  template-crt.html  template.html  template_embed.html  tmux.rs
viewer/: bench.html  bench.py  package-lock.json  package.json  verify.html  verify.py  viewer.test.ts  viewer.ts
