[package]
name = "shellglass"
# Placeholder: the real version is stamped from the git tag at release time (see
# .github/workflows/release.yml). Local/dev builds report the placeholder on purpose.
version = "0.0.0-dev"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.103"
arc-swap = "1"
argon2 = "0.5"
axum = { version = "0.8.9", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22.1"
bytes = "1"
clap = { version = "4.6.1", features = ["derive", "env"] }
flate2 = "1"
fontdb = "0.23"
getrandom = "0.3"
imagesize = "0.14"
libc = "0.2"
portable-pty = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls"] }
rustix = { version = "1", features = ["termios"] }
russh = "0.62"
rustls-acme = { version = "0.15", features = ["axum", "tokio"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
signal-hook = { version = "0.4", default-features = false, features = ["iterator"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.7", features = ["compression-br", "compression-gzip"] }
toml = "1.1.2"
vt100 = "0.16.2"
reqwest-websocket = "0.6.0"
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
tungstenite = { version = "0.29", default-features = false }
png = "0.18.1"
icy_sixel = "0.5"

[profile.release]
strip = true
