# Vendored from https://github.com/doy/vt100-rust at v0.16.2, MIT. Upstream is
# effectively unmaintained; this copy is patched to shellglass's needs. Keep
# local changes as separate commits on top of the vendor commit so the diff
# against upstream stays reviewable. Local patches (keep this list current):
#   - lib.rs: dropped `#![warn(clippy::cargo)]` (host-workspace metadata lints
#     don't apply to a vendored, unpublished crate).
#   - screen.rs/perform.rs: SCOSC/SCORC (bare `CSI s` / `CSI u`) save/restore
#     cursor — position + origin mode only, not attributes; save slot shared
#     with DECSC like xterm. Tests in tests/csi.rs (scosc_scorc).
#   - screen.rs/perform.rs: REP (`CSI b`) — repeat the last graphic character
#     through the print path. Tests in tests/csi.rs (rep).
#   - screen.rs/perform.rs/grid.rs: cursor-movement aliases HVP/HPA/HPR/VPR
#     (`CSI f`/`` ` ``/`a`/`e`) and a real tab-stop table — HTS (`ESC H`),
#     TBC (`CSI g`), CHT (`CSI I`), CBT (`CSI Z`); HT consults the table
#     (grid::col_tab removed). Tests in tests/csi.rs (movement_aliases,
#     tab_stops).
[package]
name = "vt100"
version = "0.16.2"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"
rust-version = "1.70"
publish = false

description = "Library for parsing terminal data (vendored + patched for shellglass)"
repository = "https://github.com/doy/vt100-rust"
readme = "README.md"
license = "MIT"

[dependencies]
itoa = "1.0.15"
unicode-width = "0.2.1"
vte = "0.15.0"

[dev-dependencies]
nix = { version = "0.30.1", features = ["term"] }
quickcheck = "1.0"
rand = "0.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
terminal_size = "0.4.2"
