# Vendored from https://github.com/doy/vt100-rust at v0.16.2, MIT. Upstream is
# effectively unmaintained; this copy is patched to shellglass's needs. Keep
# local changes as separate commits on top of the vendor commit so the diff
# against upstream stays reviewable. Local patches (keep this list current):
#   - lib.rs: dropped `#![warn(clippy::cargo)]` (host-workspace metadata lints
#     don't apply to a vendored, unpublished crate).
#   - screen.rs/perform.rs: SCOSC/SCORC (bare `CSI s` / `CSI u`) save/restore
#     cursor — position + origin mode only, not attributes; save slot shared
#     with DECSC like xterm. Tests in tests/csi.rs (scosc_scorc).
#   - screen.rs/perform.rs: REP (`CSI b`) — repeat the last graphic character
#     through the print path. Tests in tests/csi.rs (rep).
#   - screen.rs/perform.rs/grid.rs: cursor-movement aliases HVP/HPA/HPR/VPR
#     (`CSI f`/`` ` ``/`a`/`e`) and a real tab-stop table — HTS (`ESC H`),
#     TBC (`CSI g`), CHT (`CSI I`), CBT (`CSI Z`); HT consults the table
#     (grid::col_tab removed). Tests in tests/csi.rs (movement_aliases,
#     tab_stops).
#   - screen.rs/perform.rs/grid.rs: DECSTR (`CSI ! p`) soft reset — SGR,
#     DECSC data, margins, origin mode, cursor visibility, cursor keys and
#     keypad; content/cursor/alt-screen/tab-stops untouched, like xterm.
#     Tests in tests/csi.rs (decstr).
#   - screen.rs: synchronized update (DEC private mode 2026) — mode bit plus
#     wrapping BSU/ESU counters (synchronized_update{,_starts,_ends}) so a
#     sampling consumer can see edges that open and close within one read.
#     Tests in tests/mode.rs (synchronized_update).
#   - cell.rs/screen.rs: per-cell inline-image tags — Cell carries an optional
#     (id, row_off, col_off) stamped by Screen::place_image and cleared by the
#     cell's own set/clear, so image lifetime rides vt100's scroll/erase/reflow
#     exactly (Cell grows 32→40 bytes). Tests in tests/image.rs.
#   - attrs.rs/term.rs/screen.rs/cell.rs: modern SGR — underline styles
#     (4:n subparam, 21 double, kitty numbering 0-5), strikethrough (9/29),
#     underline color (58/59 incl. the colon/colorspace form). Upstream's
#     underline bit became a 3-bit style; formatted output emits 4/24 for
#     single/off (byte-compatible) and 4:n only for fancy styles. Tests in
#     tests/attr.rs (modern_sgr*).
#   - screen.rs/perform.rs: DECSCUSR (`CSI n SP q`) cursor style — raw 0-6
#     tracked on Screen (cursor_style()), reset by DECSTR and RIS; out-of-range
#     values stay unhandled. Tests in tests/csi.rs (decscusr).
#   - screen.rs/perform.rs: DECAWM (`CSI ? 7 h/l`, autowrap — off clamps the
#     cursor at the right margin like xterm) and IRM (`CSI 4 h/l`, insert mode
#     shifts the row right; first bare-SM/RM dispatch). Both reset by DECSTR.
#     Tests in tests/mode.rs (decawm_off…, irm_…).
#   - perform.rs: deliberate no-ops for non-visual queries/syntax — Primary and
#     Secondary DA (`CSI c`/`CSI > c`), bare ST (`ESC \`), XTWINOPS reports and
#     title stack (`CSI 11/13/14/16/18/19/21/22/23 t`), OSC 10/11 color
#     *queries* (`;?` only; the set form stays unhandled on purpose), cursor
#     blink (`CSI ? 12 h/l` — the mirror renders a steady cursor by design),
#     and SCS US-ASCII (`ESC ( B`/`ESC ) B` — the only charset modeled;
#     `ESC ( 0` DEC graphics keeps reporting). Tests in tests/csi.rs,
#     tests/escape.rs, tests/osc.rs.
[package]
name = "vt100"
version = "0.16.2"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"
rust-version = "1.70"
publish = false

description = "Library for parsing terminal data (vendored + patched for shellglass)"
repository = "https://github.com/doy/vt100-rust"
readme = "README.md"
license = "MIT"

[dependencies]
itoa = "1.0.15"
unicode-width = "0.2.1"
vte = "0.15.0"

[dev-dependencies]
nix = { version = "0.30.1", features = ["term"] }
quickcheck = "1.0"
rand = "0.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
terminal_size = "0.4.2"
