# Vendored from https://github.com/doy/vt100-rust at v0.16.2, MIT. Upstream is
# effectively unmaintained; this copy is patched to shellglass's needs. Keep
# local changes as separate commits on top of the vendor commit so the diff
# against upstream stays reviewable. Local patches (keep this list current):
#   - lib.rs: dropped `#![warn(clippy::cargo)]` (host-workspace metadata lints
#     don't apply to a vendored, unpublished crate); rust-version raised from
#     upstream's 1.70 to the workspace toolchain — the old claim made cargo's
#     MSRV-aware resolver downgrade the whole dependency tree.
#   - screen.rs/perform.rs: SCOSC/SCORC (bare `CSI s` / `CSI u`) save/restore
#     cursor — position + origin mode only, not attributes; save slot shared
#     with DECSC like xterm. Tests in tests/csi.rs (scosc_scorc).
#   - screen.rs/perform.rs: REP (`CSI b`) — repeat the last graphic character
#     through the print path. Tests in tests/csi.rs (rep).
#   - screen.rs/perform.rs/grid.rs: cursor-movement aliases HVP/HPA/HPR/VPR
#     (`CSI f`/`` ` ``/`a`/`e`) and a real tab-stop table — HTS (`ESC H`),
#     TBC (`CSI g`), CHT (`CSI I`), CBT (`CSI Z`); HT consults the table
#     (grid::col_tab removed). Tests in tests/csi.rs (movement_aliases,
#     tab_stops).
#   - screen.rs/perform.rs/grid.rs: DECSTR (`CSI ! p`) soft reset — SGR,
#     DECSC data, margins, origin mode, cursor visibility, cursor keys and
#     keypad; content/cursor/alt-screen/tab-stops untouched, like xterm.
#     Tests in tests/csi.rs (decstr).
#   - screen.rs: synchronized update (DEC private mode 2026) — mode bit plus
#     wrapping BSU/ESU counters (synchronized_update{,_starts,_ends}) so a
#     sampling consumer can see edges that open and close within one read.
#     Tests in tests/mode.rs (synchronized_update).
#   - cell.rs/row.rs/grid.rs/screen.rs/perform.rs/parser.rs/callbacks.rs:
#     generic per-cell data slot — Cell<T> (default T = (): no overhead)
#     carries Option<T> cleared by the cell's own set/clear, stamped over a
#     region by Screen::place_data; Parser/Screen/Callbacks gain the T param
#     with defaults so the upstream-shaped API is unchanged. Consumer-agnostic
#     (shellglass stores its inline-image overlay tag in T; any region
#     metadata works). Tests in tests/cell_data.rs.
#   - attrs.rs/term.rs/screen.rs/cell.rs: modern SGR — underline styles
#     (4:n subparam, 21 double, kitty numbering 0-5), strikethrough (9/29),
#     underline color (58/59 incl. the colon/colorspace form). Upstream's
#     underline bit became a 3-bit style; formatted output emits 4/24 for
#     single/off (byte-compatible) and 4:n only for fancy styles. Tests in
#     tests/attr.rs (modern_sgr*).
#   - attrs.rs/term.rs/screen.rs/cell.rs: conceal (SGR 8/28) — Attrs::mode
#     widened to u16 (the low byte was full); buffer keeps the characters,
#     Cell::concealed() tells renderers to hide the glyph; formatted output
#     re-emits 8/28. Deliberate deviation from kitty, which ignores SGR 8:
#     a mirror SHOWING text the local terminal hides is a content leak.
#     Tests in tests/attr.rs (conceal).
#   - attrs.rs/term.rs/screen.rs/cell.rs: blink (SGR 5/6 → one bit, 25 off;
#     kitty renders blinking text and doesn't distinguish rapid either).
#     Cell::blink() for renderers; formatted output re-emits 5/25. Tests in
#     tests/attr.rs (blink).
#   - screen.rs/perform.rs: DECSCUSR (`CSI n SP q`) cursor style — raw 0-6
#     tracked on Screen (cursor_style()), reset by DECSTR and RIS; out-of-range
#     values stay unhandled. Tests in tests/csi.rs (decscusr).
#   - screen.rs/perform.rs: DECAWM (`CSI ? 7 h/l`, autowrap — off clamps the
#     cursor at the right margin like xterm) and IRM (`CSI 4 h/l`, insert mode
#     shifts the row right; first bare-SM/RM dispatch). Both reset by DECSTR.
#     Tests in tests/mode.rs (decawm_off…, irm_…).
#   - screen.rs/perform.rs: OSC 10/11 default fg/bg overrides — set forms
#     parsed (`rgb:R/G/B` 1-4 hex digits per component, `#R…G…B…` 3/6/9/12
#     digits), OSC 110/111 reset, RIS wipes; unparseable values (named colors)
#     stay unhandled. Accessors default_fg()/default_bg(). Tests in
#     tests/osc.rs (default_colors_track_set_and_reset).
#   - screen.rs/perform.rs: window title as screen state — OSC 0/2 store it
#     (title() accessor; the set_window_* callbacks stay), XTWINOPS 22/23
#     push/pop a bounded stack (un-ignored from the no-op list below; sub 1 =
#     icon-only stays skipped), RIS wipes. Tests in tests/osc.rs
#     (title_tracks_set_stack_and_reset).
#   - attrs.rs/cell.rs/screen.rs/perform.rs: OSC 8 hyperlinks — a link id on
#     Attrs (SGR-like state, but NOT reset by SGR 0; Cell::clear strips it so
#     erased cells are never clickable), resolved through a bounded URI-deduped
#     table on Screen (link_uri(); stable ids ⇒ no spurious diffs on redraws).
#     kitty's id= params ignored; `;` in URIs rejoined; formatted output does
#     not re-emit links (documented gap — they render as plain text anyway).
#     Attrs carries the id (Cell<()> is 44 bytes with it). Tests in
#     tests/osc.rs (hyperlinks_…).
#   - perform.rs: deliberate no-ops for non-visual queries/syntax — Primary and
#     Secondary DA (`CSI c`/`CSI > c`), bare ST (`ESC \`), XTWINOPS reports
#     (`CSI 11/13/14/16/18/19/21 t`; 22/23 became the title stack above),
#     OSC 10/11 color *queries* (`;?` only; the set form is mirrored), cursor
#     blink (`CSI ? 12 h/l` — the mirror renders a steady cursor by design),
#     and SCS US-ASCII (`ESC ( B`/`ESC ) B` — the only charset modeled;
#     `ESC ( 0` DEC graphics keeps reporting). Round 4 added XTVERSION
#     (`CSI > q`), XTMODKEYS (`CSI > … m`), private DSR (`CSI ? … n`), and
#     modes 1004 (focus reporting), 2031 (color-scheme notifications) and
#     7727 (urxvt application-ESC) — all keyboard/query protocol, zero render
#     effect. Round 5 added sixel display/scroll modes 80 (DECSDM) and 8452
#     (cursor right of graphic) to the ignored set — sixel is mirrored by
#     shellglass's own interceptor with a fixed default-matching placement, so
#     the parser has no way to act on them and needn't log them. Tests in
#     tests/csi.rs (incl. noop_arms_round4), tests/escape.rs, tests/osc.rs.
#   - screen.rs/grid.rs: hardening against hostile/degenerate input (release
#     has no overflow-checks, so a bare u16 subtraction wraps instead of
#     panicking). Guard the wide-char right-margin (`cols - width`,
#     saturating_sub — a width-2 glyph on a 1-col terminal), clamp insert_lines
#     and scroll_down counts like their siblings (a 65535 CSI count can't drive
#     that many alloc passes), enforce a 1x1 floor in set_size (+ saturating_sub
#     in col_clamp) so a 0-size resize can't underflow. Plus 38:2::r:g:b /
#     48:2::r:g:b truecolor colon forms (the colorspace-id variant), mirroring
#     the existing 58 handling. Tests in tests/csi.rs (hardening_*, truecolor_*).
[package]
name = "vt100"
version = "0.16.2"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"
rust-version = "1.85"
publish = false

description = "Library for parsing terminal data (vendored + patched for shellglass)"
repository = "https://github.com/doy/vt100-rust"
readme = "README.md"
license = "MIT"

[dependencies]
itoa = "1.0.15"
unicode-width = "0.2.1"
vte = "0.15.0"

[dev-dependencies]
nix = { version = "0.30.1", features = ["term"] }
quickcheck = "1.0"
rand = "0.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
terminal_size = "0.4.2"
